modules/network/routing.tf
resource "aws_route_table" "public-rt" {
  vpc_id = aws_vpc.default.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.default.id
  }
  tags = {
    Name = "${var.vpc_name}-Public-RT"
    DeployedBy = local.DeployedBy
    CostCenter = local.CostCenter
    TeamDL = local.TeamDL
    environment = var.environment
  }
}
resource "aws_route_table" "private-rt" {
  vpc_id = aws_vpc.default.id
  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = var.natgw_id
  }
  tags = {
    Name = "${var.vpc_name}-Private-RT"
  }
}
resource "aws_route_table_association" "public_subnets" {  
  count          = length(var.public_cidr_block)
  subnet_id      = element(aws_subnet.public-subnets.*.id, count.index) # splat syntax
  route_table_id = aws_route_table.public-rt.id
}


resource "aws_route_table_association" "private_subnets" {  
  count          = length(var.private_cidr_block)
  subnet_id      = element(aws_subnet.private-subnets.*.id, count.index)
  route_table_id = aws_route_table.private-rt.id
}
